# Sigma

./: .gitignore  CMakeLists.txt  Dependencies.lua  GenerateProject.bat  Paths.lua  README.md  Sigma.sln  SigmaSolution.sln  UpgradeLog.htm  premake5.lua  readme.md
Projects/Sandbox/: CMakeLists.txt  Sandbox.vcxproj  premake5.lua
Projects/Sandbox/src/: SandboxApp.cpp  main.cpp
Projects/Sigma/: CMakeLists.txt  Sigma.vcxproj  Sigma.vcxproj.filters  premake5.lua
Projects/Sigma/src/: Platform.hpp  Sigma.cpp  Sigma.h  sgpch.h
Projects/Sigma/src/Container/: Vector2.h  Vector2D.h
Projects/Sigma/src/Core/: Application.h  Base.h  EntryPoint.h  Layer.h  RenderWindow.h
Projects/Sigma/src/Platform/: PlatformDetection.h
Projects/Sigma/src/Platform/Windows/: WindowsApplication.h  WindowsWindow.cpp  WindowsWindow.h
Projects/Sigma/src/Sigma/Container/: Vector2.h
Projects/Sigma/src/Sigma/Core/: ApplicationBase.cpp  ApplicationBase.h  Base.h  Layer.cpp  Layer.h
Sandbox/: Sandbox.vcxproj  premake5.lua
Sandbox/src/: Sandbox.cpp
Sigma/: Sigma.licenseheader  Sigma.vcxproj  premake5.lua
Sigma/setup/: GenerateProject.bat  premake5.lua
Sigma/src/: Sigma.cpp  Sigma.h  sgpch.cpp  sgpch.h
Sigma/src/Core/: Application.cpp  Application.h  Base.h  EntryPoint.cpp  EntryPoint.h  Layer.h
Sigma/src/EventHandler/: EventHandler.h  EventType.h
Sigma/src/Events/: Event.cpp  Event.h  MouseRightClickEvent.h
Sigma/src/Window/: RenderWindow.cpp  RenderWindow.h
scripts/: GenerateProjectfiles.bat
scripts/Windows/: CleanProject.bat  GenerateProjectfiles.bat
(+5 files in other folders)
